--- a/styles/colegiatura.css
+++ b/styles/colegiatura.css
@@ -28,17 +28,30 @@
   }
   .lateral{
 
-height:100vh;
+height:100%;
   width: 15%;
 
   }
   .body{
-    background-color:whitesmoke;
+    background-color:white;
       width: 85%;
-     height: 100vh;
+     height: 700px;
+     display: flex;
+     flex-direction: column;
+     overflow-y: auto;
+
        
       }
+     .left{
+       width: 100%;
+       height: 200px;
      
+     }
+     .right{
+      width: 100%;
+      height: auto;
+     
+     }
    
     .encabezado{
       display: flex;
@@ -134,15 +147,15 @@ form h4{
 }
 .form_grupo{
   display: flex;
-  
+  background-color:lightseagreen;
   align-items: center;
   justify-content: flex-end;
-  border: solid 1px black;
-  padding: 5px;
-  margin:10px 0px ;
+  border: solid 2px silver;
+  padding: 3px;
+  margin:10px 2px ;
   border-radius:4px ;
-  height: 30px;
-  width: 70%;
+  height: 40px;
+  width: 85%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -207,15 +220,7 @@ input{
 font-size: 1.1rem;
   
 }
-  form{
-width: 100%;
-height: 100vh;
-background-color:white;
-border-radius: 1em;
-padding: 3em 3em ;
-box-shadow: 0 5px 10px -5px rgb(0 0 0/30%);
 
-  }
   .enlace{
     position: absolute;
     padding :20px 50px;
@@ -320,7 +325,7 @@ border-collapse: collapse;
        
         th ,td{
     
-          font-size: .8rem;
+          font-size: 1.0rem;
          padding: 3px;
          border-bottom: solid 1px lightgray;
        }
@@ -418,13 +423,7 @@ border-collapse: collapse;
     left: 0;
     }
    
-    .container{
-      width: 100%;
-    display: flex;
    
-   
-   background-color: white;
-    }
     .imagen{
       width: 100%;
       height:auto;
