--- a/styles/estilando.css
+++ b/styles/estilando.css
@@ -197,7 +197,7 @@ color: red;
         background-color: blue;
         height: 60px;
         width: 100%;
-        border: 2px solid aliceblue;
+     
         border-radius: 1px;
       }
       nav ul{
@@ -240,6 +240,12 @@ color: red;
        .checkbtn{
         display: block;
        }
+       .lateral{
+        width: 10%;
+       }
+       .body{
+        width: 90%;
+       }
        ul{
         position: fixed;
         width: 100%;
@@ -269,7 +275,7 @@ color: red;
    
     .container{
       width: 100%;
-    display: flex;
+    
   
    
    background-color: white;
@@ -299,5 +305,6 @@ color: red;
       font-size: smaller;
       font-weight: bold;
       font-weight: bolder;
+      color: blue;
     }
       }
