--- a/styles/ins_colegiatura.css
+++ b/styles/ins_colegiatura.css
@@ -21,8 +21,7 @@
   }
   .container {
     display: flex;
-    
-    height: 100%;
+     height: 100%;
     width: 100%;
     background-color: #00008B;
   }
@@ -33,16 +32,22 @@ height:100vh;
 
   }
   .body{
-    background-color:whitesmoke;
+    background-color:white;
       width: 85%;
      height: 100vh;
+   display: flex;
+   justify-content: center;
        
       }
      
    
     .encabezado{
-      display: flex;
-      justify-content: space-around;
+     margin-right: 1px;
+     color: red;
+    display: flex;
+    justify-content: flex-start;
+
+     
     }
       
      
@@ -86,21 +91,33 @@ height:100vh;
   border-bottom: none;
 
  }
- .inputa{
-  display: flex;
-  flex-direction:column ;
-  justify-content: space-between;
-  align-content: space-between;
 
-}
 
 h2{
   text-align: center;
 }
+.formulario{
+  width: 70%;
+  border: solid 3px lightgrey;
+  border-radius: 6px;
+  background-color: lightseagreen;
+ display: inline-block;
+ height: 500px;
+ margin-top: 30px;
+ padding: 20px;
+}
+.formulario h2{
+  text-align: center;
+  color: fire;
+  text-transform: capitalize;
+}
+.formulario a[href="colegiatura.php"]{
+  margin-bottom:60px;
+}
+.inputa{
 
-form{
-  height: auto;
-  width: 80%;
+  display: flex;
+  flex-direction:column ;
 
 }
 form input{
@@ -117,43 +134,11 @@ form input{
 background-color: blue;
 color: white;
 border-radius: 4px;
-width: 90%;
-height: 25px;
-}
-form h4{
-  text-align: center;
-  font-weight: bolder;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-}
-.form_group{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  
-}
-.form_grupo{
-  display: flex;
-  
-  align-items: center;
-  justify-content: flex-end;
-  border: solid 1px black;
-  padding: 5px;
-  margin:10px 0px ;
-  border-radius:4px ;
-  height: 30px;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.form_grupo button{
-  height: 1rem;
+width: 80px;
+height: 30px;
+margin: 12PX 15px;
 }
 
-.form_grupo label{
-  font-size: .8rem;
-  font-weight: bold;
-}
 .button2{
  
   width: 100%;
@@ -180,9 +165,9 @@ button:hover{
   padding: 1px;
 }
 label{
-  font-size: .9rem;
+  font-size: .8rem;
   font-weight: bolder;
-  text-transform: uppercase;
+ 
 }
 select{
   width: 80px;
@@ -198,24 +183,22 @@ label, input {
  
   margin: 3px;
 }
-input{
+input[type="text"]{
   border: solid 1px blue;
-  padding-left: 10px;
-  margin: 9px;
-  height: 25px;
-  border-radius: 4px;
+width: 95%;
+height: 30px;
+  border-radius: 2px;
 font-size: 1.1rem;
+padding: 3px;
   
 }
-  form{
-width: 100%;
-height: 100vh;
-background-color:white;
-border-radius: 1em;
-padding: 3em 3em ;
-box-shadow: 0 5px 10px -5px rgb(0 0 0/30%);
+#cantidad{
+  height: 30px;
+  width:95%;
+  border: solid 1px blue;
+}
 
-  }
+
   .enlace{
     position: absolute;
     padding :20px 50px;
