--- a/styles/style_incidencia.css
+++ b/styles/style_incidencia.css
@@ -26,24 +26,29 @@
     width: 100%;
     background-color: #00008B;
   }
+  .btn_lat{
+    height: 50px;
+    width: 100px;
+    border: solid 3px silver;
+    border-radius: 8px;
+    background: blue;
+    color: white;
+  }
   .lateral{
 
 height:100vh;
   width: 15%;
-
+  background-color: #00008B;
   }
   .body{
     background-color:whitesmoke;
       width: 85%;
-     height: 100vh;
+     height: 100%;
        
       }
      
    
-    .encabezado{
-      display: flex;
-      justify-content: space-around;
-    }
+   
       
      
   .option{
@@ -69,13 +74,7 @@ height:100vh;
     margin-bottom:50px ;
   }
 
-  .name{
-    color: white;
-    margin-left: 5px;
-  }
-  i{
-    margin-right: 5px;
-  }
+
   a img{
     float: left;
   }
@@ -86,13 +85,7 @@ height:100vh;
   border-bottom: none;
 
  }
- .inputa{
-  display: flex;
-  flex-direction:column ;
-  justify-content: space-between;
-  align-content: space-between;
 
-}
 
 h2{
   text-align: center;
@@ -101,18 +94,16 @@ h2{
 form{
   height: auto;
   width: 80%;
+border: solid 3px salmon;
+margin-top: 25px;
+background-color: lightsteelblue;
+border-radius: 5px;
+}
+form h3{
+  text-align: center;
+  text-transform: uppercase;
+}
 
-}
-form input{
-  border: solid 1px lightslategray;
-  border-radius: 4px;
-  width: 90%;
-  height: 20px;
-  font-weight: bold;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  padding: 3px;
-}
 .btn_form{
 background-color: blue;
 color: white;
@@ -128,32 +119,16 @@ form h4{
 }
 .form_group{
   display: flex;
-  justify-content: space-between;
+ flex-wrap:wrap-reverse;
+  justify-content: space-around;
   align-items: center;
   
 }
-.form_grupo{
-  display: flex;
-  
-  align-items: center;
-  justify-content: flex-end;
-  border: solid 1px black;
-  padding: 5px;
-  margin:10px 0px ;
-  border-radius:4px ;
-  height: 30px;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.form_grupo button{
-  height: 1rem;
+.form_group label{
+  font-size: .8rem;
 }
 
-.form_grupo label{
-  font-size: .8rem;
-  font-weight: bold;
-}
+
 .button2{
  
   width: 100%;
@@ -177,7 +152,8 @@ button:hover{
   height: 20px;
   border-radius: 4px;
   border: solid 1px white;
-  padding: 1px;
+  padding: 3px;
+  width: 100px;
 }
 label{
   font-size: .9rem;
@@ -201,21 +177,17 @@ label, input {
 input{
   border: solid 1px blue;
   padding-left: 10px;
-  margin: 9px;
+  margin: 7px;
   height: 25px;
+ 
   border-radius: 4px;
 font-size: 1.1rem;
   
 }
-  form{
-width: 100%;
-height: 100vh;
-background-color:white;
-border-radius: 1em;
-padding: 3em 3em ;
-box-shadow: 0 5px 10px -5px rgb(0 0 0/30%);
+input[type="text"]{
+  width: 45%;
+}
 
-  }
   .enlace{
     position: absolute;
     padding :20px 50px;
@@ -292,28 +264,58 @@ box-shadow: 0 5px 10px -5px rgb(0 0 0/30%);
   
   }
   table{
-    width:100%;
-border-collapse: collapse;
+    width:90%;
+
+padding: 20px;
+margin: 50px;
+
+  }
+  table tr{
+    display: flex;
+    flex-direction: column;
+    padding: 8px;
+    border: solid 1px lightgrey ;
+    opacity: 80%;
+  }
+  table th{
+    display: none;
+    border: none;
+  }
+  table td{
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.1rem;
+ 
+  }
+  table td[data-titulo]::before{
+    content:attr(data-titulo);
+    font-size: 1.2rem;
+    color: silver;
     
   }
+ 
   tr:nth-child(even){
     background-color: #eee;
   }
-  th ,td{
-   
-    font-size: 1.2rem;
-   font-weight: bold;
-    padding: 5px;
-    border-bottom: solid 1px lightgray;
-    text-align: center;
-
+  .left{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
- 
+ .right{
+margin-top: 25px;
+  height: 500px;
+  overflow-y: auto;
+ margin-bottom: 5px;
+ }
 
   th{
     background-color: black;
     color: white;
     border: solid 1px white;
+  }
+  a h2{
+    color: white;
   }
   @media (max-width:1200px) {
  
@@ -365,6 +367,7 @@ border-collapse: collapse;
       border-radius: 4px;
     
     }
+  
     .imagen1{
       width: 350px;
       height:270px;
@@ -417,7 +420,24 @@ border-collapse: collapse;
     #check:checked ~ ul{
     left: 0;
     }
-   
+    input{
+      border: solid 1px blue;
+      padding-left: 10px;
+      margin: 9px;
+      height: 20px;
+      border-radius: 4px;
+    font-size: 1.0rem;
+      
+    }
+    .btn_lat{
+      height: 25px;
+      width: 140px;
+      border: solid 2px silver;
+      border-radius: 5px;
+      background: blue;
+      color: white;
+      margin: 20px 10px;
+    }
     .container{
       width: 100%;
     display: flex;
@@ -447,9 +467,10 @@ border-collapse: collapse;
      }
     .lateral{
       width: 10%;
+      height: auto;
     }
     .body{
-      width: 90%;
+      width: 100%;
     }
     a{
       font-size: smaller;
@@ -470,4 +491,11 @@ border-collapse: collapse;
       font-weight: bold;
       
     }
+    td{
+      
+      color: lightslategrey;
+      
+      
+    }
+  
       }
