--- a/styles/estilando.css
+++ b/styles/estilando.css
@@ -34,23 +34,27 @@ height:100vh;
 
   }
   .body{
-    background-color:aliceblue;
+    background-color:yellow;
       width: 85%;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         border: solid 1px whitesmoke;
         border-radius: 3px;
+        height: 100vh;
       }
       .left{
         height: 100vh;
-         width: 50%;
-         background-color: yellow;
+         width: 100%;
+         background-color: white;
          padding: 20px 20px;
+         color: blue;
+         font-size: 2rem;
       }
       .right{
         height: 100vh;
-        width: 50%;
+        width: 0%;
         background-color: yellowgreen;
         padding: 20px 20px;
         
