--- a/styles/ins_colegiatura.css
+++ b/styles/ins_colegiatura.css
@@ -88,6 +88,7 @@ height:100vh;
   display: flex;
   justify-content: flex-start;
   margin-right: 5px;
+  margin-left: 5px;
   border-bottom: none;
 
  }
