--- a/styles/ins_noticia.css
+++ b/styles/ins_noticia.css
@@ -21,8 +21,7 @@
   }
   .container {
     display: flex;
-    
-    height: 100%;
+     height: 100%;
     width: 100%;
     background-color: #00008B;
   }
@@ -33,25 +32,24 @@ height:100vh;
 
   }
   .body{
-    background-color:whitesmoke;
+    background-color:white;
       width: 85%;
      height: 100vh;
-       
+   display: flex;
+   justify-content: center;
+   align-items: flex-start;
+   flex-direction: column;
+       padding: 40px;
       }
-     .left{
-        background-color: aqua;
-        width: 50%;
-        height: 100%;
-     }
-     .right{
-         background-color: yellow;
-         width: 50%;
-         height: 100%;
-     }
+     
    
     .encabezado{
-      display: flex;
-      justify-content: space-around;
+     margin-right: 1px;
+     color: red;
+    display: flex;
+    justify-content: flex-start;
+
+     
     }
       
      
@@ -95,81 +93,85 @@ height:100vh;
   border-bottom: none;
 
  }
- .inputa{
-  display: flex;
-  flex-direction:column ;
-  justify-content: space-between;
-  align-content: space-between;
 
-}
 
 h2{
   text-align: center;
 }
-
-form{
-  height: auto;
+.form_grupo{
+  display: flex;
+  flex-direction: column;
+}
+.formulario{
   width: 80%;
+  border: solid 3px lightgrey;
+  border-radius: 6px;
+  background-color: lightseagreen;
+ display: flex;
+ flex-direction: column;
+ height: 100px;
+ margin-top: 5px;
+ padding: 10px;
+}
+.formularioX{
+  width: 80%;
+  border: solid 3px lightgrey;
+  border-radius: 6px;
+  background-color: lightseagreen;
+ display: flex;
+ flex-direction: column;
+ height: 1100px;
+ margin-top: 10px;
+ padding: 30px;
+}
+.center{
+ margin-right: auto;
+ margin-left: auto;
+  color: blue;
+}
+#profesor{
+  width: 100%;
+  height: 30px;
+}
+#nivel_academico{
+  width: 100%;
+  height: 30px;
+}
+.form_grupo h2{
+  color: blue;
+}
+.formulario h2{
+  text-align: center;
+  color: fire;
+  text-transform: capitalize;
+  color: blue;
+}
+.formulario a[href="colegiatura.php"]{
+  margin-bottom:60px;
+}
+.inputa{
+
+  display: flex;
+  flex-direction:column ;
 
 }
-form input{
-  border: solid 1px lightslategray;
-  border-radius: 4px;
-  width: 90%;
-  height: 20px;
-  font-weight: bold;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  padding: 3px;
-}
+
 .btn_form{
 background-color: blue;
 color: white;
 border-radius: 4px;
-width: 90%;
-height: 25px;
-}
-form h4{
-  text-align: center;
-  font-weight: bolder;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-}
-.form_group{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  
-}
-.form_grupo{
-  display: flex;
-  
-  align-items: center;
-  justify-content: flex-end;
-  border: solid 1px black;
-  padding: 5px;
-  margin:10px 0px ;
-  border-radius:4px ;
-  height: 30px;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.form_grupo button{
-  height: 1rem;
+width: 80px;
+height: 30px;
+margin: 12PX 15px;
 }
 
-.form_grupo label{
-  font-size: .8rem;
-  font-weight: bold;
-}
 .button2{
  
   width: 100%;
   height: auto;
   background-color: blue;
   border-radius: 4px;
-  margin-bottom: 10px;
+  margin-top: 50px;
   color: white;
   font-size: 1.1rem;
 
@@ -189,42 +191,35 @@ button:hover{
   padding: 1px;
 }
 label{
-  font-size: .9rem;
+  font-size: 1.2rem;
   font-weight: bolder;
-  text-transform: uppercase;
+ 
 }
-select{
-  width: 80px;
-  border: solid 1px blue;
-  border-radius: 4px;
-  height: 20px;
-}
+
 p{
   text-align: centers;
 }
 
-label, input {
- 
-  margin: 3px;
-}
-input{
+
+.formulario input[type="text"]{
   border: solid 1px blue;
-  padding-left: 10px;
-  margin: 9px;
-  height: 25px;
-  border-radius: 4px;
+width: 100%;
+height: 30px;
+  border-radius: 2px;
 font-size: 1.1rem;
+padding: 3px;
   
 }
-  form{
-width: 100%;
-height: 100vh;
-background-color:white;
-border-radius: 1em;
-padding: 3em 3em ;
-box-shadow: 0 5px 10px -5px rgb(0 0 0/30%);
+.formulario textarea{
+  font-size: 2rem;
+}
+#cantidad{
+  height: 30px;
+  width:95%;
+  border: solid 1px blue;
+}
 
-  }
+
   .enlace{
     position: absolute;
     padding :20px 50px;
@@ -427,33 +422,33 @@ border-collapse: collapse;
     left: 0;
     }
    
-    .imagen{
-      width: 450px;
-      height:450px;
-    padding: 10px;
-      background-color:rgba(33, 59, 53, 0.02);
-    color:rgba(33, 51, 58, 0.8);
-    
-      border-radius: 4px;
+    .container{
+      width: 100%;
     display: flex;
-   justify-content: flex-start;
-    align-items: center;
+   
+   
+   background-color: white;
     }
-    .imagen1{
-      width: 450px;
-      height:450px;
-       border: solid .5px rgba(33, 51, 58, 0.8);
-  border-radius: 24px;
-  padding: 10px;  
+    .imagen{
+      width: 100%;
+      height:auto;
+     
+      border-radius: 4px;
+     
+    
     }
- 
     .encabezado{
       display: flex;
       justify-content: space-around;
       margin-top: 40px;
       margin-bottom: 40px;
     }
-  
+    .imagen1{
+      width: 0;
+      height:auto;
+     
+      border-radius: 4px;
+     }
     .lateral{
       width: 10%;
     }
