--- a/styles/style_SE.css
+++ b/styles/style_SE.css
@@ -6,19 +6,15 @@
   text-decoration: none;
 }
 
-
-  .header{
-    grid-column: 1;
-    grid-row: 1;
-    background-color: bisque;
-    height: 100px;
-    width: 100%;
-  }
-  .cabeza{
-    background-color: #00008B;
-    height: 100%;
-    width: 100%;
-  }
+.boxt{
+  margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  height: 100%;
+  width: 100%;
+}
   .container {
     display: flex;
     
@@ -26,33 +22,68 @@
     width: 100%;
     background-color: #00008B;
   }
+  .btn_lat{
+    height: 50px;
+    width: 100px;
+    border: solid 3px silver;
+    border-radius: 8px;
+    background: blue;
+    color: white;
+  }
   .lateral{
 
 height:100vh;
   width: 15%;
-
+  background-color: #00008B;
   }
   .body{
-    background-color:whitesmoke;
+    background-color: #eee;
       width: 85%;
-     height: 100vh;
-       
+     height: 100%;
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: space-around;
+     align-items: flex-start;
+     padding: 20px;
       }
-     .left{
-        background-color: aqua;
-        width: 50%;
-        height: 100%;
-     }
-     .right{
-         background-color: yellow;
-         width: 50%;
-         height: 100%;
-     }
-   
-    .encabezado{
+      img:hover{
+        box-shadow: 0 0 6px 7px rgba(40, 189, 247, 0.8);
+      }
+      .imagen{
+        width: 450px;
+        height:450px;
+      padding: 10px;
+        background-color:rgba(33, 59, 53, 0.02);
+      color:rgba(33, 51, 58, 0.8);
+      margin-top: 15px;
+      margin-bottom: 15px;
+        border-radius: 4px;
       display: flex;
-      justify-content: space-around;
-    }
+     justify-content: flex-start;
+      align-items: center;
+      }
+      .encabezado {
+        color: blue;
+
+      }
+      .imagen1{
+        width: 450px;
+        height:450px;
+         border: solid .5px rgba(33, 51, 58, 0.8);
+    border-radius: 24px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+      }
+     .img-1{
+      padding: 10px;
+     }
+      p:hover{
+      background-color: white;
+      font-size: 1.0rem;
+      box-shadow: 0 0 3px 3px rgba(40, 189, 247, 0.8);
+     }
+    
+   
       
      
   .option{
@@ -68,6 +99,7 @@ height:100vh;
     font-size: 1.2rem;
     padding-top: 50px;
     padding-left:10px;
+    margin-right: 5px;
     
   }
   .option h3{
@@ -78,13 +110,7 @@ height:100vh;
     margin-bottom:50px ;
   }
 
-  .name{
-    color: white;
-    margin-left: 5px;
-  }
-  i{
-    margin-right: 5px;
-  }
+
   a img{
     float: left;
   }
@@ -92,36 +118,25 @@ height:100vh;
   display: flex;
   justify-content: flex-start;
   margin-right: 5px;
+  margin-left:5px;
   border-bottom: none;
 
  }
- .inputa{
-  display: flex;
-  flex-direction:column ;
-  justify-content: space-between;
-  align-content: space-between;
 
-}
 
 h2{
   text-align: center;
 }
-
-form{
-  height: auto;
-  width: 80%;
-
+.form_group select{
+  width: 300px;
+  text-align: left;
 }
-form input{
-  border: solid 1px lightslategray;
-  border-radius: 4px;
-  width: 90%;
-  height: 20px;
-  font-weight: bold;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  padding: 3px;
+
+form h3{
+  text-align: center;
+  text-transform: uppercase;
 }
+
 .btn_form{
 background-color: blue;
 color: white;
@@ -137,32 +152,17 @@ form h4{
 }
 .form_group{
   display: flex;
-  justify-content: space-between;
+ flex-wrap:wrap-reverse;
+  justify-content: right;
   align-items: center;
-  
+  width: 100%;
+  background-color:#eee;
 }
-.form_grupo{
-  display: flex;
-  
-  align-items: center;
-  justify-content: flex-end;
-  border: solid 1px black;
-  padding: 5px;
-  margin:10px 0px ;
-  border-radius:4px ;
-  height: 30px;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.form_grupo button{
-  height: 1rem;
+.form_group label{
+  font-size: .8rem;
 }
 
-.form_grupo label{
-  font-size: .8rem;
-  font-weight: bold;
-}
+
 .button2{
  
   width: 100%;
@@ -186,7 +186,8 @@ button:hover{
   height: 20px;
   border-radius: 4px;
   border: solid 1px white;
-  padding: 1px;
+  padding: 3px;
+  width: 100px;
 }
 label{
   font-size: .9rem;
@@ -210,21 +211,17 @@ label, input {
 input{
   border: solid 1px blue;
   padding-left: 10px;
-  margin: 9px;
+  margin: 7px;
   height: 25px;
+ 
   border-radius: 4px;
 font-size: 1.1rem;
   
 }
-  form{
-width: 100%;
-height: 100vh;
-background-color:white;
-border-radius: 1em;
-padding: 3em 3em ;
-box-shadow: 0 5px 10px -5px rgb(0 0 0/30%);
+input[type="text"]{
+  width: 45%;
+}
 
-  }
   .enlace{
     position: absolute;
     padding :20px 50px;
@@ -301,21 +298,38 @@ box-shadow: 0 5px 10px -5px rgb(0 0 0/30%);
   
   }
   table{
-    width:100%;
-border-collapse: collapse;
+    width:90%;
+
+padding: 20px;
+margin: 50px;
+
+  }
+  table tr{
+    display: flex;
+    flex-direction: column;
+    padding: 8px;
+    border: solid 1px lightgrey ;
+    opacity: 80%;
+  }
+  table th{
+    display: none;
+    border: none;
+  }
+  table td{
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.1rem;
+ 
+  }
+  table td[data-titulo]::before{
+    content:attr(data-titulo);
+    font-size: 1.2rem;
+    color: silver;
     
   }
+ 
   tr:nth-child(even){
     background-color: #eee;
-  }
-  th ,td{
-   
-    font-size: 1.2rem;
-   font-weight: bold;
-    padding: 5px;
-    border-bottom: solid 1px lightgray;
-    text-align: center;
-
   }
  
 
@@ -323,6 +337,9 @@ border-collapse: collapse;
     background-color: black;
     color: white;
     border: solid 1px white;
+  }
+  a h2{
+    color: white;
   }
   @media (max-width:1200px) {
  
@@ -374,6 +391,7 @@ border-collapse: collapse;
       border-radius: 4px;
     
     }
+  
     .imagen1{
       width: 350px;
       height:270px;
@@ -426,39 +444,52 @@ border-collapse: collapse;
     #check:checked ~ ul{
     left: 0;
     }
-   
-    .imagen{
-      width: 450px;
-      height:450px;
-    padding: 10px;
-      background-color:rgba(33, 59, 53, 0.02);
-    color:rgba(33, 51, 58, 0.8);
-    
+    input{
+      border: solid 1px blue;
+      padding-left: 10px;
+      margin: 9px;
+      height: 20px;
       border-radius: 4px;
+    font-size: 1.0rem;
+      
+    }
+    .btn_lat{
+      height: 25px;
+      width: 140px;
+      border: solid 2px silver;
+      border-radius: 5px;
+      background: blue;
+      color: white;
+      margin: 20px 10px;
+    }
+    .container{
+      width: 100%;
     display: flex;
-   justify-content: flex-start;
-    align-items: center;
+   
+   
+   background-color: white;
     }
-    .imagen1{
-      width: 450px;
-      height:450px;
-       border: solid .5px rgba(33, 51, 58, 0.8);
-  border-radius: 24px;
-  padding: 10px;  
+    .imagen{
+      width: 100%;
+      height:auto;
+     
+      border-radius: 4px;
+     
+    
     }
- 
     .encabezado{
       display: flex;
       justify-content: space-around;
       margin-top: 40px;
       margin-bottom: 40px;
     }
-  
+   
     .lateral{
       width: 10%;
+      height: auto;
     }
     .body{
-      width: 90%;
+      width: 100%;
     }
     a{
       font-size: smaller;
@@ -479,4 +510,11 @@ border-collapse: collapse;
       font-weight: bold;
       
     }
+    td{
+      
+      color: lightslategrey;
+      
+      
+    }
+  
       }
