--- a/styles/style_incidencia.css
+++ b/styles/style_incidencia.css
@@ -64,6 +64,7 @@ height:100vh;
     font-size: 1.2rem;
     padding-top: 50px;
     padding-left:10px;
+    margin-right: 5px;
     
   }
   .option h3{
@@ -82,6 +83,7 @@ height:100vh;
   display: flex;
   justify-content: flex-start;
   margin-right: 5px;
+  margin-left:5px;
   border-bottom: none;
 
  }
