--- a/styles/style_login.css
+++ b/styles/style_login.css
@@ -37,11 +37,18 @@ width: 110px;
 position: absolute;
 top: 50px;
 border-radius: 50%;
-    background-image: url('imagen/llaves.jpg');
-    background-repeat: no-repeat;
-    background-size:cover;
+   background-color: aliceblue;
     margin-top: -35%;
     margin-left: 29%;
+}
+.key{
+    height: 70px;
+    width: 110px;
+    position: absolute;
+    top:50px;
+    border-radius: 50%;
+    margin-top:-35% ;
+    margin-left:29%;
 }
 input{
     width: 100%;
@@ -72,9 +79,9 @@ input[type="submit"]{
 a{
 
     text-decoration: none;
-    font-size: 25px;
+    font-size: 30px;
     line-height: 20px;
-    color: darkgray;
+    color: white;
    
 }
 .error{
