--- a/styles/style_incidencia.css
+++ b/styles/style_incidencia.css
@@ -37,14 +37,14 @@
   }
   .lateral{
 
-height:100vh;
+height:100%;
   width: 15%;
   background-color: #00008B;
   }
   .body{
     background-color:whitesmoke;
       width: 85%;
-     height: 100%;
+     height: 100vh;
        
       }
      
@@ -55,7 +55,7 @@ height:100vh;
   .option{
     background-color:#00008B;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     padding-top: 50px;
   
   }
@@ -84,7 +84,7 @@ height:100vh;
 
  .logotipo a{
   display: flex;
-  justify-content: space-between;
+  margin-left: 5px;
   margin-right: 5px;
   border-bottom: none;
 
