--- a/styles/ins_profesor.css
+++ b/styles/ins_profesor.css
@@ -31,6 +31,13 @@ height:100vh;
   width: 15%;
 
   }
+  .form_elimina{
+    margin-top: 100px;
+    padding: 100px,30px;
+    margin-right: auto;
+    margin-left: auto;
+    color: white;
+  }
   .body{
     background-color:white;
       width: 85%;
@@ -131,6 +138,12 @@ h2{
 .form_grupo h2{
   color: blue;
 }
+.elimina{
+  width: 90%;
+  height: auto;
+  margin-top:100px ;
+  padding: 20px;
+}
 .formulario h2{
   text-align: center;
   color: fire;
@@ -141,7 +154,7 @@ h2{
   margin-bottom:60px;
 }
 .inputa{
-
+margin-top: 100px;
   display: flex;
   flex-direction:column ;
 
